[package]
name = "tos"
version = "0.0.1"
edition = "2024"

[dependencies]
rumqttc = "0.19"
rumqttd = "0.16"
mongodb = "3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1.0"
log = "0.4"
flexi_logger = "0.26"
dotenv = "0.15"  # or latest version